Loading in top articles
using sidekiq to manage background jobs

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,22 +4,28 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  host: localhost
+  username: hnpwa
+  password: hnpwa
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: 30
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: hnpwa
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: hnpwa_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: hnpwa_prod
