Actually updating items in top news via action cable!!!

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,5 +1,7 @@
 development:
-  adapter: async
+  adapter: redis
+  url: <%= ENV['REDIS_SERVER'] %>
+  channel_prefix: hnpwa_dev
 
 test:
   adapter: async
