--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "actioncable": "^5.2.1-1",
+    "activestorage": "^5.2.2",
     "local-time": "^2.1.0",
-    "stimulus": "^1.1.0"
+    "rails-ujs": "^5.2.2",
+    "stimulus": "^1.1.0",
+    "turbolinks": "^5.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
