--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,6 +1,6 @@
 development:
   adapter: redis
-  url: <%= ENV['REDIS_SERVER'] %>
+  url: "redis://localhost:6379/1"
   channel_prefix: hnpwa_dev
 
 test:
