fixing code structure and settings for rails 6

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "hnpwa",
   "private": true,
   "dependencies": {
+    "@rails/actioncable": "^6.0.0-alpha",
+    "@rails/activestorage": "^6.0.0-alpha",
+    "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "3.5",
-    "actioncable": "^5.2.1-1",
-    "activestorage": "^5.2.2",
-    "bulma": "^0.7.4",
     "local-time": "^2.1.0",
     "rails-erb-loader": "^5.5.0",
     "rails-ujs": "^5.2.2",
-    "stimulus": "^1.1.0",
+    "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
