--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@
 yarn-debug.log*
 .yarn-integrity
 .DS_Store
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
