--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "hnpwa",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.3-4",
-    "@rails/activestorage": "^6.0.3-4",
-    "@rails/ujs": "^6.0.3-4",
+    "@rails/actioncable": "^6.1.0",
+    "@rails/activestorage": "^6.1.0",
+    "@rails/ujs": "^6.1.0",
     "@rails/webpacker": "^5.2.1",
     "local-time": "^2.1.0",
-    "stimulus": "^1.1.1",
+    "stimulus": "^2.0.0",
     "turbolinks": "^5.2.0"
   },
   "devDependencies": {
